<resources>
    <string name="app_name">Qual-O-Mat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">\@kadsendino</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Startseite</string>
    <string name="menu_mytests">Meine Tests</string>
    <string name="menu_archive">Archiv</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_about">Über Qual-O-Mat</string>

    <string name="start_button">Start</string>
</resources>