<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mytests"
            android:icon="@drawable/mytests_icon"
            android:title="@string/menu_mytests" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/archive_icon"
            android:title="@string/menu_archive" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info_icon"
            android:title="@string/menu_about" />
    </group>
</menu>